--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <div class="content">
       <div>
         <h1>duckduckgo</h1>
-        <form action="https://duckduckgo.com/?q=search" method="get">
+        <form autocomplete="off" action="https://duckduckgo.com/?q=search" method="get">
           <input type="text" name="q"/>
         </form>
       </div>
       <div>
         <h1>piped</h1>
-        <form action="https://piped.video/results?search_query=" method="get">
+        <form autocomplete="off" action="https://piped.video/results?search_query=" method="get">
           <input type="text" name="search_query"/>
         </form>
       </div>
-      <div>
+      <div class="thingies">
         <h1>teddit</h1>
-        <form action="https://teddit.froth.zone/r/all/search?q=" method="get">
+        <form autocomplete="off" action="https://teddit.froth.zone/r/all/search?q=" method="get">
           <input type="text" name="q"/>
         </form>
       </div>
