--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   </head>
   <body>
     <div class="content">
-      <div>
+      <div class="thingies">
         <h1>duckduckgo</h1>
         <form autocomplete="off" action="https://duckduckgo.com/?q=search" method="get">
           <input type="text" name="q"/>
         </form>
       </div>
-      <div>
+      <div class="thingies">
         <h1>piped</h1>
         <form autocomplete="off" action="https://piped.video/results?search_query=" method="get">
           <input type="text" name="search_query"/>
