--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <div class="content">
+      <h1 id="bigheader">homepage</h1>
+      <img id="pfp" src="https://avatars.githubusercontent.com/u/91346779?v=4">
       <div class="thingies">
         <h1>duckduckgo</h1>
         <form autocomplete="off" action="https://duckduckgo.com/?q=search" method="get">
@@ -20,6 +22,12 @@
       <div class="thingies">
         <h1>teddit</h1>
         <form autocomplete="off" action="https://teddit.froth.zone/r/all/search?q=" method="get">
+          <input type="text" name="q"/>
+        </form>
+      </div>
+      <div class="thingies">
+        <h1>portage</h1>
+        <form autocomplete="off" action="https://packages.gentoo.org/packages/search?q=" method="get">
           <input type="text" name="q"/>
         </form>
       </div>
