--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div class="content">
       <h1 id="bigheader">homepage</h1>
-      <img id="pfp" src="https://avatars.githubusercontent.com/u/91346779?v=4">
+      <img id="pfp" alt="profile picture" src="https://avatars.githubusercontent.com/u/91346779?v=4">
       <div class="thingies">
         <h1>duckduckgo</h1>
         <form autocomplete="off" action="https://duckduckgo.com/?q=search" method="get">
