--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
       <h1 id="bigheader">homepage</h1>
       <img id="pfp" src="https://avatars.githubusercontent.com/u/91346779?v=4">
       <div class="thingies">
-        <h1>duckduckgo</h1>
+        <h1><a href="https://duck.com">duckduckgo</a></h1>
         <form autocomplete="off" action="https://duckduckgo.com/?q=search" method="get">
           <input type="text" name="q"/>
         </form>
       </div>
       <div class="thingies">
-        <h1>piped</h1>
+        <h1><a href="https://piped.video">piped</a></h1>
         <form autocomplete="off" action="https://piped.video/results?search_query=" method="get">
           <input type="text" name="search_query"/>
         </form>
       </div>
       <div class="thingies">
-        <h1>teddit</h1>
+        <h1><a href="https://teddit.froth.zone">teddit</a></h1>
         <form autocomplete="off" action="https://teddit.froth.zone/r/all/search?q=" method="get">
           <input type="text" name="q"/>
         </form>
       </div>
       <div class="thingies">
-        <h1>portage</h1>
+        <h1><a href="https://packages.gentoo.org">portage</a></h1>
         <form autocomplete="off" action="https://packages.gentoo.org/packages/search?q=" method="get">
           <input type="text" name="q"/>
         </form>
