--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1 id="bigheader">homepage</h1>
       <img id="pfp" alt="profile picture" src="https://avatars.githubusercontent.com/u/91346779?v=4">
       <div class="thingies">
-        <h1><a href="https://duck.com">duckduckgo</a></h1>
+        <h1><a href="https://duckduckgo.com/settings">duckduckgo</a></h1>
         <form autocomplete="off" action="https://duckduckgo.com/?q=search" method="get">
           <input type="text" name="q"/>
         </form>
@@ -28,6 +28,12 @@
       <div class="thingies">
         <h1><a href="https://packages.gentoo.org">portage</a></h1>
         <form autocomplete="off" action="https://packages.gentoo.org/packages/search?q=" method="get">
+          <input type="text" name="q"/>
+        </form>
+      </div>
+      <div class="thingies">
+        <h1><a href="https://github.com">github</a></h1>
+        <form autocomplete="off" action="https://github.com/search?q=" method="get">
           <input type="text" name="q"/>
         </form>
       </div>
