--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="content">
-      <h1 id="bigheader">homepage</h1>
+      <h1 id="bigheader">portal</h1>
       <img id="pfp" alt="profile picture" src="https://avatars.githubusercontent.com/u/91346779?v=4">
       <div class="thingies">
         <h1><a href="https://packages.gentoo.org">portage</a></h1>
