--- a/index.html
+++ b/index.html
@@ -2,36 +2,37 @@
 <html>
   <head>
     <link rel="stylesheet" href="./assets/stylesheet.css">
+    <title>portal</title>
   </head>
   <body>
     <div class="content">
       <h1 id="bigheader">portal</h1>
       <img id="pfp" alt="profile picture" src="https://avatars.githubusercontent.com/u/91346779?v=4">
-      <div class="thingies">
+      <div class="bars">
         <h1><a href="https://packages.gentoo.org">portage</a></h1>
         <form autocomplete="off" action="https://packages.gentoo.org/packages/search?q=" method="get">
           <input type="text" name="q"/>
         </form>
       </div>
-      <div class="thingies">
+      <div class="bars">
         <h1><a href="https://github.com">github</a></h1>
         <form autocomplete="off" action="https://github.com/search?q=" method="get">
           <input type="text" name="q"/>
         </form>
       </div>
-      <div class="thingies">
+      <div class="bars">
         <h1><a href="https://duckduckgo.com/settings">duckduckgo</a></h1>
         <form autocomplete="off" action="https://duckduckgo.com/?q=search" method="get">
           <input type="text" name="q"/>
         </form>
       </div>
-      <div class="thingies">
+      <div class="bars">
         <h1><a href="https://teddit.froth.zone">teddit</a></h1>
         <form autocomplete="off" action="https://teddit.froth.zone/r/all/search?q=" method="get">
           <input type="text" name="q"/>
         </form>
       </div>
-      <div class="thingies">
+      <div class="bars">
         <h1><a href="https://piped.video">piped</a></h1>
         <form autocomplete="off" action="https://piped.video/results?search_query=" method="get">
           <input type="text" name="search_query"/>
